2006-04-29  Sven Neumann  <sven@gimp.org>

	* app/core/Makefile.am
	* app/core/gimp-user-install.[ch]: new files based on code that
	used to live in user-install-dialog.c.

	* app/dialogs/user-install-dialog.[ch]: only the dialog code
	remained here.

	* app/app_procs.c: use the new user-install API.  Perform a
	non-interactive user installation when running without a display.

2006-04-29  Tor Lillqvist  <tml@novell.com>

	* app/plug-in/gimppluginmanager-locale-domain.c
	(gimp_plug_in_manager_get_locale_domains): NULL-terminate the
	locale_domains and locale_paths string vectors, as they are freed
	with g_strfreev() in gimp_plug_in_manager_restore().

	* app/plug-in/plug-in.c (plug_in_close): Make it compile again on
	Win32. Use g_usleep() instead of select()/Sleep() Unix/Windows
	ifdef.

2006-04-29  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-run.[ch]: removed...

	* app/plug-in/gimppluginmanager-run.[ch]: ...and added as methods
	of GimpPlugInManager.

	* app/pdb/gimppluginprocedure.c
	* app/pdb/gimptemporaryprocedure.c: changed accordingly.

2006-04-29  Sven Neumann  <sven@gimp.org>

	* app/dialogs/user-install-dialog.[ch]: removed unused code and
	unused parameters passed to user_install_dialog_run().

	* app/app_procs.c (app_run): changed accordingly.

2006-04-29  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-types.h
	* app/plug-in/gimppluginmanager.[ch]: new object which keeps all
	plug-in related stuff that was kept in the Gimp instance. Has
	"menu-branch-added" and "last-plug-in-changed" signals.

	* app/plug-in/plug-ins.[ch]: removed, all its functions are in
	GimpPlugInManager now.

	* app/core/gimpmarshal.list: new marshaller for the new object.

	* app/core/gimp.[ch]: removed all plug-in related stuff and keep a
	GimpPlugInManager around.

	* app/plug-in/plug-in-data.[ch]
	* app/plug-in/plug-in-file.[ch]
	* app/plug-in/plug-in-help-domain.[ch]